--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,11 @@ limitations under the License. -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <link id="dynamic-favicon" rel="shortcut icon" href="http://cos.shanghai.tce.yonghuicloud.cn/prod-file-service-1255000089/itwork-files-space/iam-service/file_72787ba2cadc401d863c950a1ceace75_logo-header-icon">
     <title>SkyWalking</title>
   </head>
   <body>
